Corrected various issues with external links, padding, outlines and other style issues

--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat May 01 2021 14:30:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun May 02 2021 02:29:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f759b55b643fb59da8baab6" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -101,9 +101,6 @@ drift.load('r73nxaxiv89c');
               <li class="footer_link">
                 <a href="privacy.html" class="link_white">Privacy Policy</a>
               </li>
-              <li class="footer_link">
-                <a href="site-map.html" class="link_white">Site Map</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -149,9 +146,8 @@ drift.load('r73nxaxiv89c');
               </li>
               <li class="footer_icons">
                 <a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a>
-                <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.instagram.com/ryuacupuncture/" target="_blank" class="footer_link-2 footer_icon"></a>
                 <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a>
-                <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"> </a>
               </li>
             </ul>
           </div>
