--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun May 02 2021 02:29:04 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue May 04 2021 05:07:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <link href="css/ryu-acupuncture.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script><!--  Start of Async Drift Code  -->
   <script>
@@ -106,7 +106,7 @@ drift.load('r73nxaxiv89c');
       </div>
       <div class="_2_block_row_reverse">
         <div data-w-id="058240cb-5cb0-a0b3-8ec6-6bc7cefed0ad" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
-          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 87vw, (max-width: 1439px) 43vw, 580px" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2"></a>
+          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="100vw" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2"></a>
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">RESULTS MATTER</div>
@@ -241,7 +241,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 991px) 18vw, (max-width: 1439px) 16vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image_3">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image_3">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -259,7 +259,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 991px) 18vw, (max-width: 1439px) 16vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image_4">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image_4">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -277,7 +277,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 991px) 18vw, (max-width: 1439px) 16vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image_5">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image_5">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -614,7 +614,8 @@ drift.load('r73nxaxiv89c');
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/ryu-acupuncture.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "sqrqTDIVSg");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript><!--  START: Mobile Autoplay Video  -->
+  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "sqrqTDIVSg");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
+  <!--  START: Mobile Autoplay Video  -->
   <script>
 	var mobilevideo = document.getElementsByTagName("video")[0];
 	mobilevideo.setAttribute("playsinline", "");
