Added new footer links as social accounts have expanded

--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue May 04 2021 05:07:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu May 06 2021 06:21:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -190,7 +190,7 @@ drift.load('r73nxaxiv89c');
     <div class="main_container">
       <p class="solo_para">There are many options for treatment and we will design a custom plan for you, picking the best modalities available for your conditions and issues. No treatment plans are alike, but be assured we are choosing the best strategies to get you on to your journey to wellness.</p>
     </div>
-    <a href="#" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
+    <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
   </div>
   <div class="footer_section">
     <div class="main_container">
@@ -270,9 +270,13 @@ drift.load('r73nxaxiv89c');
                 <a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a>
               </li>
               <li class="footer_icons">
-                <a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a>
                 <a href="https://www.instagram.com/ryuacupuncture/" target="_blank" class="footer_link-2 footer_icon"></a>
-                <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.facebook.com/Ryu-Acupuncture-Clinic-229147904214537" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://twitter.com/RyuAcupuncture" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.linkedin.com/in/jay-ryu-569824211/" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.youtube.com/channel/UCPa6LxRfZaU_Ml_2v72rDew" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-burbank-3" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://g.page/RyuAcupuncture?gm" target="_blank" class="footer_link-2 footer_icon"></a>
               </li>
             </ul>
           </div>
