--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue May 04 2021 05:07:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu May 06 2021 06:21:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f759b55b643fb59da8baab6" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -145,9 +145,13 @@ drift.load('r73nxaxiv89c');
                 <a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a>
               </li>
               <li class="footer_icons">
-                <a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a>
                 <a href="https://www.instagram.com/ryuacupuncture/" target="_blank" class="footer_link-2 footer_icon"></a>
-                <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.facebook.com/Ryu-Acupuncture-Clinic-229147904214537" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://twitter.com/RyuAcupuncture" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.linkedin.com/in/jay-ryu-569824211/" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.youtube.com/channel/UCPa6LxRfZaU_Ml_2v72rDew" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-burbank-3" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://g.page/RyuAcupuncture?gm" target="_blank" class="footer_link-2 footer_icon"></a>
               </li>
             </ul>
           </div>
