Removed a paragraph from services page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><!--  Last Published: Thu May 06 2021 06:21:28 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri May 07 2021 06:29:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ryu Acupuncture Clinic, Inc | Acupuncture &amp; Herbs</title>
-  <meta content="Ryu Acupuncture Clinic, Inc | Acupuncture &amp; Herbs" property="og:title">
-  <meta content="Ryu Acupuncture Clinic, Inc | Acupuncture &amp; Herbs" property="twitter:title">
+  <title>Ryu Acupuncture Clinic | Acupuncture &amp; Herbs</title>
+  <meta content="Ryu Acupuncture Clinic | Acupuncture &amp; Herbs" property="og:title">
+  <meta content="Ryu Acupuncture Clinic | Acupuncture &amp; Herbs" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
