--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu May 06 2021 06:21:28 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri May 07 2021 06:29:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -187,9 +187,7 @@ drift.load('r73nxaxiv89c');
     </div>
   </div>
   <div class="services_outro_section">
-    <div class="main_container">
-      <p class="solo_para">There are many options for treatment and we will design a custom plan for you, picking the best modalities available for your conditions and issues. No treatment plans are alike, but be assured we are choosing the best strategies to get you on to your journey to wellness.</p>
-    </div>
+    <div class="main_container"></div>
     <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
   </div>
   <div class="footer_section">
