--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Fri May 07 2021 06:29:58 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat May 08 2021 06:42:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Ryu Acupuncture Clinic | Acupuncture &amp; Herbs</title>
+  <meta content="Often considered the best acupuncturists in Los Angeles, we provide Traditional Chinese Medicine services to help you on your journey to wellness. This includes acupuncture, auriculotherapy, moxibustion, cupping, Chinese herbal medicine, heat therapy and nutritional guidance." name="description">
   <meta content="Ryu Acupuncture Clinic | Acupuncture &amp; Herbs" property="og:title">
+  <meta content="Often considered the best acupuncturists in Los Angeles, we provide Traditional Chinese Medicine services to help you on your journey to wellness. This includes acupuncture, auriculotherapy, moxibustion, cupping, Chinese herbal medicine, heat therapy and nutritional guidance." property="og:description">
   <meta content="Ryu Acupuncture Clinic | Acupuncture &amp; Herbs" property="twitter:title">
+  <meta content="Often considered the best acupuncturists in Los Angeles, we provide Traditional Chinese Medicine services to help you on your journey to wellness. This includes acupuncture, auriculotherapy, moxibustion, cupping, Chinese herbal medicine, heat therapy and nutritional guidance." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
