--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun May 09 2021 06:28:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun May 09 2021 06:49:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -494,6 +494,36 @@ drift.load('r73nxaxiv89c');
         <div class="slide-nav w-slider-nav w-round"></div>
       </div>
       <a href="testimonials.html" class="ryu_button w-button"><strong>SEE ALL</strong></a>
+    </div>
+  </div>
+  <div class="parallax_section">
+    <div class="parallax_block_needles"></div>
+  </div>
+  <div id="Services" class="blog_section">
+    <div class="main_container">
+      <div class="block_text_pre_h2">OUR BLOG</div>
+      <h2 class="section_h2">Sharing years of wisdom</h2>
+      <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proven effective for a wide array of chronic conditions. Fortunately, it is becoming more mainstream in the West. During your initial visit, we will work together to determine the cause of your condition through an evaluation of symptoms, behaviors and lifestyle. Additional examination such as history, look, feel, taste, smell and your ultimately your pulse will help guide the course of your treatment.</p>
+      <div class="collection-list-wrapper-3 w-dyn-list">
+        <div role="list" class="w-dyn-items w-row">
+          <div role="listitem" class="w-dyn-item w-col w-col-4">
+            <a href="#" class="cms_link_block w-inline-block">
+              <div class="cms_block">
+                <div class="card_top"><img loading="lazy" src="" alt=""></div>
+                <div class="card_bottom">
+                  <h3 class="card_h3-2"></h3>
+                  <div class="card_date">This is some text inside of a div block.</div>
+                  <p class="card_cms_para"></p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="w-dyn-empty">
+          <div>No items found.</div>
+        </div>
+      </div>
+      <a href="services.html" class="ryu_button w-button"><strong>LEARN MORE</strong></a>
     </div>
   </div>
   <div class="parallax_section">
