--- a/team.html
+++ b/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun May 09 2021 06:49:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon May 10 2021 06:38:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -55,6 +55,7 @@ drift.load('r73nxaxiv89c');
         <a href="services.html" class="nav_link w-nav-link">Services</a>
         <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
         <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
+        <a href="testimonials.html" class="nav_link w-nav-link">Blog</a>
         <a href="contact.html" class="nav_link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
