Started the foundation of the blog detail page, more style adjustment to home page blog section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon May 10 2021 06:38:45 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon May 10 2021 06:54:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -510,7 +510,7 @@ drift.load('r73nxaxiv89c');
           <div role="listitem" class="collection-item w-dyn-item w-col w-col-4">
             <a href="#" class="cms_link_block w-inline-block">
               <div class="cms_block">
-                <div class="card_top"><img loading="lazy" src="" alt=""></div>
+                <div class="card_top"><img loading="lazy" src="" alt="" class="card_top_img"></div>
                 <div class="card_bottom">
                   <h3 class="card_h3-2"></h3>
                   <div class="card_date"></div>
