Additional style work done to blog page

--- a/detail_blog.html
+++ b/detail_blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon May 10 2021 06:54:58 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue May 11 2021 06:36:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60978474138d1bb14dcd9917" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -64,6 +64,7 @@ drift.load('r73nxaxiv89c');
   <div class="blog_page">
     <div class="main_container">
       <h1 class="section_h1"></h1>
+      <div class="blog_page_post_date"></div><img src="" loading="lazy" alt="" class="blog_page_main_image">
       <div class="w-richtext"></div>
     </div>
   </div>
@@ -90,6 +91,7 @@ drift.load('r73nxaxiv89c');
               <li class="footer_link">
                 <a href="testimonials.html" class="link_white">Testimonials</a>
               </li>
+              <li class="footer_link">Blog</li>
               <li class="footer_link">
                 <a href="contact.html" class="link_white">Contact</a>
               </li>
