--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon May 10 2021 06:54:58 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue May 11 2021 06:36:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -805,6 +805,7 @@ drift.load('r73nxaxiv89c');
               <li class="footer_link">
                 <a href="testimonials.html" aria-current="page" class="link_white w--current">Testimonials</a>
               </li>
+              <li class="footer_link">Blog</li>
               <li class="footer_link">
                 <a href="contact.html" class="link_white">Contact</a>
               </li>
