--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed May 12 2021 06:50:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed May 12 2021 08:46:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f759b55b643fb59da8baab6" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,6 +40,7 @@ drift.SNIPPET_VERSION = '0.3.1';
 drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
+  .truncate { white-space: nowrap; text-overflow: ellipsis; }
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
