--- a/detail_blog.html
+++ b/detail_blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed May 12 2021 06:50:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed May 12 2021 08:46:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60978474138d1bb14dcd9917" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -38,6 +38,7 @@ drift.SNIPPET_VERSION = '0.3.1';
 drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
+  .truncate { white-space: nowrap; text-overflow: ellipsis; }
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
@@ -62,7 +63,7 @@ drift.load('r73nxaxiv89c');
     </div>
   </div>
   <div class="blog_page">
-    <div class="main_container">
+    <div class="blog_container">
       <h1 class="section_h1"></h1>
       <div class="blog_page_post_date"></div><img src="" loading="lazy" alt="" class="blog_page_main_image">
       <div class="w-richtext"></div>
