Added meta titles and descriptions to all pages, added robots.txt and fine tuned blog styles.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html><!--  Last Published: Wed May 12 2021 08:46:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed May 12 2021 11:04:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ryu Acupuncture Clinic | Acupuncture &amp; Herbs</title>
+  <title>Burbank&#x27;s Best Acupuncture &amp; Herbs | Ryu Acupuncture Clinic</title>
   <meta content="Often considered the best acupuncturists in Los Angeles, we provide Traditional Chinese Medicine services to help you on your journey to wellness. This includes acupuncture, auriculotherapy, moxibustion, cupping, Chinese herbal medicine, heat therapy and nutritional guidance." name="description">
-  <meta content="Ryu Acupuncture Clinic | Acupuncture &amp; Herbs" property="og:title">
+  <meta content="Burbank&#x27;s Best Acupuncture &amp; Herbs | Ryu Acupuncture Clinic" property="og:title">
   <meta content="Often considered the best acupuncturists in Los Angeles, we provide Traditional Chinese Medicine services to help you on your journey to wellness. This includes acupuncture, auriculotherapy, moxibustion, cupping, Chinese herbal medicine, heat therapy and nutritional guidance." property="og:description">
-  <meta content="Ryu Acupuncture Clinic | Acupuncture &amp; Herbs" property="twitter:title">
+  <meta content="Burbank&#x27;s Best Acupuncture &amp; Herbs | Ryu Acupuncture Clinic" property="twitter:title">
   <meta content="Often considered the best acupuncturists in Los Angeles, we provide Traditional Chinese Medicine services to help you on your journey to wellness. This includes acupuncture, auriculotherapy, moxibustion, cupping, Chinese herbal medicine, heat therapy and nutritional guidance." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -45,7 +45,6 @@ drift.SNIPPET_VERSION = '0.3.1';
 drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
-  .truncate { white-space: nowrap; text-overflow: ellipsis; }
 </head>
 <body class="ryu_body">
   <div id="Hero" class="hero_section">
@@ -71,7 +70,7 @@ drift.load('r73nxaxiv89c');
         <a href="services.html" class="nav_link w-nav-link">Services</a>
         <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
         <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
-        <a href="testimonials.html" class="nav_link w-nav-link">Blog</a>
+        <a href="blog.html" class="nav_link w-nav-link">Blog</a>
         <a href="contact.html" class="nav_link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
@@ -577,7 +576,9 @@ drift.load('r73nxaxiv89c');
               <li class="footer_link">
                 <a href="testimonials.html" class="link_white">Testimonials</a>
               </li>
-              <li class="footer_link">Blog</li>
+              <li class="footer_link">
+                <a href="blog.html" class="link_white">Blog</a>
+              </li>
               <li class="footer_link">
                 <a href="contact.html" class="link_white">Contact</a>
               </li>
