--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Wed May 12 2021 08:46:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed May 12 2021 11:04:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f75a0efe24b373e47ab1ed5" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Privacy</title>
-  <meta content="Privacy" property="og:title">
-  <meta content="Privacy" property="twitter:title">
+  <title>Your Privacy Rights | Ryu Acupuncture</title>
+  <meta content="An in depth explanation of your privacy rights while visiting our website. Utilize this page of information to ensure you know where you stand." name="description">
+  <meta content="Your Privacy Rights | Ryu Acupuncture" property="og:title">
+  <meta content="An in depth explanation of your privacy rights while visiting our website. Utilize this page of information to ensure you know where you stand." property="og:description">
+  <meta content="Your Privacy Rights | Ryu Acupuncture" property="twitter:title">
+  <meta content="An in depth explanation of your privacy rights while visiting our website. Utilize this page of information to ensure you know where you stand." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -40,7 +45,6 @@ drift.SNIPPET_VERSION = '0.3.1';
 drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
-  .truncate { white-space: nowrap; text-overflow: ellipsis; }
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
@@ -56,7 +60,7 @@ drift.load('r73nxaxiv89c');
         <a href="services.html" class="nav_link w-nav-link">Services</a>
         <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
         <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
-        <a href="testimonials.html" class="nav_link w-nav-link">Blog</a>
+        <a href="blog.html" class="nav_link w-nav-link">Blog</a>
         <a href="contact.html" class="nav_link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
@@ -249,7 +253,9 @@ drift.load('r73nxaxiv89c');
               <li class="footer_link">
                 <a href="testimonials.html" class="link_white">Testimonials</a>
               </li>
-              <li class="footer_link">Blog</li>
+              <li class="footer_link">
+                <a href="blog.html" class="link_white">Blog</a>
+              </li>
               <li class="footer_link">
                 <a href="contact.html" class="link_white">Contact</a>
               </li>
