--- a/site-map.html
+++ b/site-map.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed May 12 2021 08:46:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed May 12 2021 11:04:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fabd152b2c7616de336da47" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,6 @@ drift.SNIPPET_VERSION = '0.3.1';
 drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
-  .truncate { white-space: nowrap; text-overflow: ellipsis; }
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
@@ -56,7 +55,7 @@ drift.load('r73nxaxiv89c');
         <a href="services.html" class="nav_link w-nav-link">Services</a>
         <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
         <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
-        <a href="testimonials.html" class="nav_link w-nav-link">Blog</a>
+        <a href="blog.html" class="nav_link w-nav-link">Blog</a>
         <a href="contact.html" class="nav_link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
@@ -90,7 +89,9 @@ drift.load('r73nxaxiv89c');
               <li class="footer_link">
                 <a href="testimonials.html" class="link_white">Testimonials</a>
               </li>
-              <li class="footer_link">Blog</li>
+              <li class="footer_link">
+                <a href="blog.html" class="link_white">Blog</a>
+              </li>
               <li class="footer_link">
                 <a href="contact.html" class="link_white">Contact</a>
               </li>
