--- a/team.html
+++ b/team.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Wed May 12 2021 08:46:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed May 12 2021 11:04:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Our Team | Acupuncturists| Ryu Acupuncture Clinic, Inc</title>
-  <meta content="Our Team | Acupuncturists| Ryu Acupuncture Clinic, Inc" property="og:title">
-  <meta content="Our Team | Acupuncturists| Ryu Acupuncture Clinic, Inc" property="twitter:title">
+  <title>Our Team of Acupuncturists | Ryu Acupuncture Clinic</title>
+  <meta content="Meet our team of licensed acupuncturists that comprise our clinic. Each brings a wealth of information to aid you on your journey to health and wellness." name="description">
+  <meta content="Our Team  of Acupuncturists | Ryu Acupuncture Clinic" property="og:title">
+  <meta content="Meet our team of licensed acupuncturists that comprise our clinic. Each brings a wealth of information to aid you on your journey to health and wellness." property="og:description">
+  <meta content="Our Team  of Acupuncturists | Ryu Acupuncture Clinic" property="twitter:title">
+  <meta content="Meet our team of licensed acupuncturists that comprise our clinic. Each brings a wealth of information to aid you on your journey to health and wellness." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -40,7 +45,6 @@ drift.SNIPPET_VERSION = '0.3.1';
 drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
-  .truncate { white-space: nowrap; text-overflow: ellipsis; }
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
@@ -56,7 +60,7 @@ drift.load('r73nxaxiv89c');
         <a href="services.html" class="nav_link w-nav-link">Services</a>
         <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
         <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
-        <a href="testimonials.html" class="nav_link w-nav-link">Blog</a>
+        <a href="blog.html" class="nav_link w-nav-link">Blog</a>
         <a href="contact.html" class="nav_link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
@@ -70,7 +74,7 @@ drift.load('r73nxaxiv89c');
       <p class="solo_para">Our clinic is proudly family-owned and operated. Each member of our team brings different traits, skill sets, characteristics and specialties to the office - which makes us quite unique and more than capable of handling a wide-variety of different ailments. We are constantly working on improving our skills, keeping up with the latest medical information available and honing our technique. We welcome you to learn a bit more about each member of our team, our family.</p>
       <div class="blue_divide"></div>
       <div class="_2_block_row margin_bottom">
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" sizes="100vw" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" alt="Jay Ryu in the office." class="bio_img"></div>
+        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 414.4375px, (max-width: 991px) 28vw, (max-width: 1439px) 29vw, 390px" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" alt="Jay Ryu in the office." class="bio_img"></div>
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497e" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
           <h2 class="section_h2_left">Dr. Jay Ryu, L.Ac., Ph.D</h2>
           <p class="bio_para">Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean. Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
@@ -84,7 +88,7 @@ drift.load('r73nxaxiv89c');
         </div>
       </div>
       <div class="_2_block_row margin_top">
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea6714999" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/jennifer_ryu.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="70f7b243-a42b-5465-f4ce-2bbea671499a" srcset="images/jennifer_ryu-p-500.jpeg 500w, images/jennifer_ryu-p-800.jpeg 800w, images/jennifer_ryu-p-1080.jpeg 1080w, images/jennifer_ryu-p-1600.jpeg 1600w, images/jennifer_ryu.jpg 1920w" sizes="100vw" alt="Jennifer Ryu in the office." class="bio_img"></div>
+        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea6714999" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/jennifer_ryu.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="70f7b243-a42b-5465-f4ce-2bbea671499a" srcset="images/jennifer_ryu-p-500.jpeg 500w, images/jennifer_ryu-p-800.jpeg 800w, images/jennifer_ryu-p-1080.jpeg 1080w, images/jennifer_ryu-p-1600.jpeg 1600w, images/jennifer_ryu.jpg 1920w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 337.5px, (max-width: 991px) 28vw, (max-width: 1439px) 29vw, 390px" alt="Jennifer Ryu in the office." class="bio_img"></div>
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671498c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
           <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
           <p class="bio_para">Jennifer followed into her father’s footsteps and has adopted the approach of treating the root causes and following the journey to wellness. She is board certified and uses traditional acupuncture, Korean hand acupuncture, auricular acupuncture, herbal medicine and many other techniques and modalities. She has a background working in autoimmune conditions, cancer, fertility, pain, and many other chronic conditions.<br><br>In her current enrollment of her Doctorate program, she is furthering her area of interest in fertility to women of and beyond the primal reproductive years. Her goal is to create a simpler understanding or dialogue to bridge the gap between and Eastern and Western medicine.</p>
@@ -115,7 +119,9 @@ drift.load('r73nxaxiv89c');
               <li class="footer_link">
                 <a href="testimonials.html" class="link_white">Testimonials</a>
               </li>
-              <li class="footer_link">Blog</li>
+              <li class="footer_link">
+                <a href="blog.html" class="link_white">Blog</a>
+              </li>
               <li class="footer_link">
                 <a href="contact.html" class="link_white">Contact</a>
               </li>
